public/css/main.css
* {
  padding: 0;
  margin: 0;
}

body {
  display: flex;
  font-family: 'Lato', sans-serif;
  flex-direction: column;
}

a {
  text-decoration: none;
  color: black;
}

ul {
  list-style: none;
}

.container {
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.nav-bar {
  position: relative;
  padding: 15px 0;
  font-size: 24px;
  background: rgba(0,0,0,0.5);
}

.nav-bar a {
  color: white;
  margin: 0px 16px;
}

.pure-menu {
  position: absolute;
  top: 15px;
  right: 0;
}

#mobile-menu-toggler {
  display: none;
  cursor: pointer;
}

.mobile-menu {
  position: absolute;
  top: 59px;
  width: 100%;
}

.mobile-menu > ul > li {
  padding: 10px 0;
}

#brand {
  color: white;
  float: left;
}

.search-bar {
  display: flex;
  justify-content: center;
}

.search-bar > * {
  padding: 5px;
}

.search-bar > button {
  background-color: #0062d0;
  color: #FFF;
  font-weight: bold;
  border-color: #0062d0;
  border-style: solid;
  width: 100px;
  margin: 0px 5px;
}

.search-bar > #search {
  width: calc(100% - 100px);
}

.pagination {
  margin-top: 20px;
  display: flex;
  justify-content: center;
}

.pagination > .pages > a {
  position: relative;
  top: -28px;
  padding: 8px 8px;
  margin: 10px 10px;
  color: white;
  border-radius: 50%;
  background-color: black;
  line-height: 24px;
  width: 24px;
  display: inline-block;
}

.pages {
  height: 3px;
  background-color: black;
}

.pages > a:hover {
  background-color: #005abf;
}

#active-page {
  background-color: #0062d0;
}

.disabled {
  display: none;
}

@media only screen and (max-width: 768px) {
  .desktop-menu {
    display: none;
  }

  .pure-menu > a {
    display: none;
  }

  #mobile-menu-toggler {
    display: block;
  }
}

